--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
             <h4>Manager, ALM Performance and Operations</h4>
-            <h6><a href="http://www.cdkglobal.com" target="_blank">CDK Global</a>, April 2014 ~ Present</h6>
+            <h6><a href="http://www.cdkglobal.com" target="_blank">CDK Global</a>, April 2014 ~ July 2018</h6>
             <p>At CDK Global, my primary responsibility is to manage 2 distinct teams (9 engineers) within the Application Lifecycle Management department.
                As part of the ALM leadership group, we provide consultative services to development managers in the area of software development, build, release,
                deploy, operations, and monitoring of hosted applications.  We promote agile and devops philosophies in order to continuously deliver improved
