--- a/index.html
+++ b/index.html
@@ -154,6 +154,23 @@
       <div class="row text-left employer">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
+            <h4>Enterprise Architecture Consulting</h4>
+            <h6><a href="http://www.ignw.io" target="_blank">InfoGroup Northwest</a>, July 2018 ~ Present</h6>
+            <p>Architect, Design, Develop &amp; Implement innovative software solutions related to the modern software development practices, DevOps and Agile Transformation of the enterprise.
+            <ul>
+               <li>Develop and mature our Software Engineering and devops practice areas in response to client needs and market demand</li>
+               <li>Technologies will include Git, Hashicorp tool sets, Puppet, Jenkins, Docker EE,Kubernetes, Kafka, ELK Stack and many other DevOps related technologies</li>
+               <li>Work with customer Infrastructure and Operations teams to develop automations strategies for both private and Public data center stacks (Hyperconverged/Traditional architectures, VMWare, KVM, Cisco, F5 & AWS, Azure, GCP)</li>
+               <li>Work with software languages which will include node.js, Go, Java, PHP, Ruby and COTS based application distributions</li>
+               <li>Expose Strengths and Weaknesses in the CI/CD Processes and suggest or Automate Paths Forward to Mitigate those Weaknesses</li>
+            </ul>
+          </div>
+        </div>
+     </div>
+
+      <div class="row text-left employer">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
             <h4>Manager, ALM Performance and Operations</h4>
             <h6><a href="http://www.cdkglobal.com" target="_blank">CDK Global</a>, April 2014 ~ July 2018</h6>
             <p>At CDK Global, my primary responsibility is to manage 2 distinct teams (9 engineers) within the Application Lifecycle Management department.
