--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-md-offset-2 col-md-8">
           <div class="section-heading">
             <h2>About Damon</h2>
-            <p>25 years of experience in information technology, particularly web application development.  Strong advocate of agile, lean, and scrum.  Passionate about devops, reducing cycle-time, and mentoring.</p>
+            <p>25 years of combined experience in software development and data center operations.  Strong advocate of agile, lean, and scrum.  Passionate about devops, reducing cycle-time, and mentoring.</p>
           </div>
         </div>
       </div>
