Updating Resume file

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="img/about/code.png" alt="" class="img-responsive center-block" />
             <h4>Development</h4>
             <blockquote>
-               <p>15+ years in software development and engineering with multiple languages (Java, PHP, .Net, Python). Been there, done that. </p>
+               <p>25 years in software development and engineering with multiple languages (Java, PHP, .Net, Python). Been there, done that. </p>
             </blockquote>
           </div>
         </div>
@@ -154,7 +154,7 @@
       <div class="row text-left employer">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-            <h4>Enterprise Architecture Consulting</h4>
+            <h4>Enterprise Architect</h4>
             <h6><a href="http://www.ignw.io" target="_blank">InfoGroup Northwest</a>, July 2018 ~ Present</h6>
             <p>Architect, Design, Develop &amp; Implement innovative software solutions related to the modern software development practices, DevOps and Agile Transformation of the enterprise.
             <ul>
