Updating through Adobe.

--- a/index.html
+++ b/index.html
@@ -154,8 +154,42 @@
       <div class="row text-left employer">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
+            <h4>Manager, Security Solutions, Adobe, 2021 - Present</h4>
+            <h6><a href="https://www.adobe.com" target="_blank">Adobe</a>, 2021 ~ Present</h6>
+            <p>Architect, Design, Develop &amp; Implement innovative software solutions related to the modern software development practices, DevOps and Agile Transformation of the enterprise.
+            <ul>
+              <li>Manages the Secrets Management (HashiCorp Vault) and the Privileged Access Control (OneIdentity SCB) teams at Adobe</li>
+              <li>Work closely with security architecture teams to ensure our platforms are offered with all required security controls built-in</li>
+              <li>Enable our services to be consumed by engineers within Adobe with the lowest possible friction</li>
+              <li>Employ automation to reduce human toil and to simply and speed up delivery of services</li>
+              <li>Consult regularly with our internal customer base concerning feature requests and changing requirements</li>
+            </ul>
+          </div>
+        </div>
+     </div>
+
+     <div class="row text-left employer">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
+          <h4>Manager, Platform Development</h4>
+          <h6><a href="https://www.anitiaon.com" target="_blank">Anitian</a>, 2018 - 2021</h6>
+          <p>Architect, Design, Develop &amp; Implement innovative software solutions related to the modern software development practices, DevOps and Agile Transformation of the enterprise.
+          <ul>
+             <li>Managed a team of platform engineers to support the development and deployment of turn-key FedRAMP environments in AWS</li>              
+             <li>Architected the first Azure FedRAMP solution for the company</li>
+             <li>Mentored the engineering team on best practices of CICD pipelines, test automation, and deployment</li>
+             <li>Evaluated and implemented security controls in CSP environments for our customers</li>
+             <li>Participated in and provided evidence to 3rd party auditors of our environments</li>
+          </ul>
+        </div>
+      </div>
+   </div>
+
+      <div class="row text-left employer">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
             <h4>Enterprise Architect</h4>
-            <h6><a href="http://www.ignw.io" target="_blank">InfoGroup Northwest</a>, July 2018 ~ Present</h6>
+            <h6><a href="https://www.ignw.io" target="_blank">InfoGroup Northwest</a>, July 2018 ~ Present</h6>
             <p>Architect, Design, Develop &amp; Implement innovative software solutions related to the modern software development practices, DevOps and Agile Transformation of the enterprise.
             <ul>
                <li>Develop and mature our Software Engineering and devops practice areas in response to client needs and market demand</li>
@@ -172,7 +206,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
           <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
             <h4>Manager, ALM Performance and Operations</h4>
-            <h6><a href="http://www.cdkglobal.com" target="_blank">CDK Global</a>, April 2014 ~ July 2018</h6>
+            <h6><a href="https://www.cdkglobal.com" target="_blank">CDK Global</a>, April 2014 ~ July 2018</h6>
             <p>At CDK Global, my primary responsibility is to manage 2 distinct teams (9 engineers) within the Application Lifecycle Management department.
                As part of the ALM leadership group, we provide consultative services to development managers in the area of software development, build, release,
                deploy, operations, and monitoring of hosted applications.  We promote agile and devops philosophies in order to continuously deliver improved
@@ -195,7 +229,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
          <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
            <h4>Sr Web Engineer</h4>
-           <h6><a href="http://www.ohsu.edu" target="_blank">Oregon Health &amp; Science University</a>, April 2008 ~ April 2014</h6>
+           <h6><a href="https://www.ohsu.edu" target="_blank">Oregon Health &amp; Science University</a>, April 2008 ~ April 2014</h6>
            <p>At OHSU, my primary responsibility was the oversight and management of the web application platform for the public website and private intranet.
              From custom application development, to security monitoring and remediation, to implementation of SDLC pipeline services, I was able to provide comprehensive
              solutions for the organization's web application development community.  Often this required working collaboratively with additional ITG members from
@@ -217,7 +251,7 @@
      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
           <h4>Sr Web Engineer</h4>
-          <h6><a href="http://www.mentor.com" target="_blank">Mentor Graphics</a>, October 2003 ~ March 2008</h6>
+          <h6><a href="https://www.mentor.com" target="_blank">Mentor Graphics</a>, October 2003 ~ March 2008</h6>
           <p>At Mentor Graphics, my primary role was a web application systems engineer, supporting multiple corporate websites and web applications.
              Working closely with development teams, we provided server application support, load balancing services, health monitoring, reliability reports,source control, and release management support. </p>
           <ul>
