--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="#workhistory">Work History</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="Damon_Gentry.pdf" target="_blank">PDF Version</a></li>
+        <li><a href="damongentry.pdf" target="_blank">PDF Version</a></li>
       </ul>
     </div>
     <!-- /dl-menuwrapper -->
